# zero-2-hero-python-flask-microservice

./: .bandit.yaml  .editorconfig  .flake8  .gitignore  .hadolint.yml  .mergify.yml  Dockerfile  LICENSE  Makefile  README.md  azure-pipeline.yml  behave-report.html  behave.ini  cloudbuild.yaml  pyproject.toml  run.py  sonarqube.md
.github/: dependabot.yml
.github/workflows/: pipeline.yml  python-app.yml
concourse-ci/: Makefile  pipeline.yml  spin-concourse-m1.sh
concourse-ci/local-concourse/: docker-compose.yml
concourse-ci/secrets/: vars.yml
concourse-ci/tasks/docker/: build-image.yml
concourse-ci/tasks/poetry/: task.yml
features/: environment.py  greetings.feature
features/steps/: step_def.py
greetings/: app.py  greetings_generator.py  health.py  settings.py
kubernetes/helm-chart/: values.yaml
kubernetes/helm-chart/templates/: deployment.yaml  ingress.yaml  service.yaml
performance-testing/: k6.txt  script.js
scripts/: health-check.sh  helm-deploy.sh  pen-test.sh  vulnerability-scan.sh
terraform/gcp/: cloudbuild-trigger.tf  container-registry.tf  main.tf  service-account.tf  terraform.tfstate.backup  variables.tf
tests/: conftest.py  test_greetings_generator.py  test_greetings_generatorit.py
