[tool.poetry]
name = "zero-2-hero-python-flask-microservice"
version = "0.1.0"
description = "Python Flask app to demonstrate TDD, BDD & CI/CD through Containerization."
authors = ["abhisheksr01"]

[tool.poetry.dependencies]
python = "^3.8.1"
pytest = "^7.4.0"
black = "^22.10"
flake8 = "^6.0.0"
behave = "^1.2.6"
requests = "^2.31.0"
taskipy = "^1.11.0"
pytest-html = "^3.2.0"
behave-html-formatter = "^0.9.10"
pytest-cov = "^4.1.0"
Flask = "^2.3.2"
bandit = "^1.7.5"
safety = "^2.3.5"
mutmut = "^2.4.2"
junit2html = "^30.0.6"

[tool.poetry.dev-dependencies]
spec = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
runall = "task format-lint && task vulnerability-scan && task test"
format-lint = "poetry run black ./ && poetry run flake8"
vulnerability-scan = "poetry run bandit -r ./greetings && poetry run safety check --full-report"
test = "poetry run pytest --cov=greetings tests/ -vvv -s --html=unit-test-report.html --self-contained-html && poetry run behave -f html -o bdd-test-report.html"