[tool.poetry]
name = "zero-2-hero-python-flask-microservice"
version = "0.1.0"
description = "Python Flask app to demonstrate TDD, BDD & CI/CD through Containerization."
authors = ["abhisheksr01"]

[tool.poetry.dependencies]
python = "^3.8.1"
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
behave = "^1.2.6"
requests = "^2.32.2"
taskipy = "^1.12.2"
pytest-html = "^4.1.1"
behave-html-formatter = "^0.9.10"
pytest-cov = "^5.0.0"
Flask = "^3.0.2"
bandit = "^1.7.8"
safety = "^3.0.1"
mutmut = "^2.4.4"
junit2html = "^30.1.6"

[tool.poetry.dev-dependencies]
spec = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
runall = "task format-lint && task vulnerability-scan && task test"
format-lint = "poetry run black ./ && poetry run flake8"
vulnerability-scan = "poetry run bandit -r ./greetings && poetry run safety check --full-report"
test = "poetry run pytest --cov=greetings tests/ -vvv -s --html=unit-test-report.html --self-contained-html && poetry run behave -f html -o bdd-test-report.html"