[tool.poetry]
name = "zero-2-hero-python-flask-microservice"
version = "0.1.0"
description = "Python Flask app to demonstrate TDD, BDD & CI/CD through Containerization."
authors = ["abhisheksr01"]

[tool.poetry.dependencies]
python = "^3.13.1"
requests = "^2.32.3"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]
spec = "^1.4.1"
bandit = "^1.7.9"
safety = "^3.2.4"
mutmut = "^3.2.2"
junit2html = "^31.0.2"
pytest-html = "^4.1.1"
behave-html-formatter = "^0.9.10"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
runall = "task format-lint && task vulnerability-scan && task test"
format-lint = "poetry run black ./ && poetry run flake8"
vulnerability-scan = "poetry run bandit -r ./greetings && poetry run safety check --full-report"
test = "poetry run pytest --cov=greetings tests/ -vvv -s --html=unit-test-report.html --self-contained-html && poetry run behave -f html -o bdd-test-report.html"
